Rename to proper clustername

--- a/sync-app/cluster-name-secret.yaml
+++ b/sync-app/cluster-name-secret.yaml
@@ -14,7 +14,8 @@ spec:
       name: stack-config
   template:
     stringData:
-      clustername: $(.stack-config.data.cluster_name)
+      cluster.yaml: |
+        clustername: $(.stack-config.data.cluster_name)
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretExport
