--- a/sync-app/app.yaml
+++ b/sync-app/app.yaml
@@ -11,7 +11,7 @@ spec:
   - inline:
       paths:
         #@yaml/text-templated-strings
-        config/app.yaml: |
+        app.yaml: |
           #@ load("@ytt:data", "data")
           ---
           apiVersion: kappctrl.k14s.io/v1alpha1
@@ -27,9 +27,7 @@ spec:
                   ref: (@= data.values.git.ref @)
                   subPath: #@ "(@= data.values.git.sub_path+"/" @)" + data.values.clustername
             template:
-              - ytt:
-                  paths: 
-                  - config
+              - ytt: {}
             deploy:
               - kapp: {}
   template:
